--- a/product-manager.html
+++ b/product-manager.html
@@ -40,8 +40,16 @@
   
     <div class="container">
 <!--Begin body here --> 
-<h5><a href='https://boards.greenhouse.io/starry/jobs/4370604002'>Job Application for Product Manager at Starry</a></h5> 
+<h5><a href='https://seequent.workable.com/j/52E810A380'>Seequent - Jobs: Product Owner - Apply online</a></h5> 
 <p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-07-27</p>
+<hr/>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://seequent.workable.com/j/8C127AACCE'>Seequent - Jobs: Product Owner - Apply online</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-07-27</p>
+<hr/>
+<h5><a href='https://boards.greenhouse.io/starry/jobs/4370604002'>Job Application for Product Manager at Starry</a></h5> 
+<p><span class="badge badge-light">Boston, Massachusetts</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
 <h5><a href='https://jobs.jobvite.com/automationanywhere/job/oFHBafwR'>Automation Anywhere Careers - Sr. Product Manager</a></h5> 
@@ -94,7 +102,7 @@
 <p><span class="badge badge-light">San Francisco, CA</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
-<h5><a href='http://chubjobs.applytojob.com/apply/h3nAft975c/Sr-Ecommerce-Product-Manager'>Sr. Ecommerce Product Manager - Chubbies, Inc. - Career Page</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://chubjobs.applytojob.com/apply/h3nAft975c/Sr-Ecommerce-Product-Manager'>Sr. Ecommerce Product Manager - Chubbies, Inc. - Career Page</a></h5> 
 <p><span class="badge badge-light">Austin, TX</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
@@ -130,7 +138,7 @@
 <p><span class="badge badge-light">Shanghai</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/people-ai/adc56525-2c8d-46e3-9339-51e597bae05f'>People.ai - Senior Product Manager, CRM Platform</a></h5> 
+<h5><a href='https://jobs.lever.co/people-ai/adc56525-2c8d-46e3-9339-51e597bae05f'>People.ai - Senior Product Manager, CRM Platform</a></h5> 
 <p><span class="badge badge-light">San Francisco</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
@@ -162,7 +170,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-07-27</p>
 <hr/>
-<h5><a href='https://lovecrafts.recruiterbox.com/jobs/fk031wm/'>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://lovecrafts.recruiterbox.com/jobs/fk031wm/'>
     Product Manager at LoveCrafts
 </a></h5> 
 <p><span class="badge badge-light"></span></p>
@@ -176,7 +184,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/EvolutionGaming/743999692387237-product-owner'>Evolution Gaming Product Owner | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/EvolutionGaming/743999692387237-product-owner'>Evolution Gaming Product Owner | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
@@ -208,7 +216,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/entelo/jobs/1793522'>Job Application for Product Manager at Entelo</a></h5> 
+<h5><a href='https://boards.greenhouse.io/entelo/jobs/1793522'>Job Application for Product Manager at Entelo</a></h5> 
 <p><span class="badge badge-light">San Francisco, CA</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
@@ -242,7 +250,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/Qwick/743999692194794-product-manager'>Qwick Product Manager | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Qwick/743999692194794-product-manager'>Qwick Product Manager | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
@@ -266,7 +274,7 @@
 <p><span class="badge badge-light">Mountain View, CA</span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/capeanalytics/d712fde6-8b50-40cf-a4f9-8c735c74c4e1'>Cape Analytics - Product Manager</a></h5> 
+<h5><a href='https://jobs.lever.co/capeanalytics/d712fde6-8b50-40cf-a4f9-8c735c74c4e1'>Cape Analytics - Product Manager</a></h5> 
 <p><span class="badge badge-light">Mountain View, CA</span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
@@ -332,7 +340,7 @@ this?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/rewardgateway/426a19fb-9393-455c-af59-1f33bbe7ce3d'>Reward Gateway - E-Commerce Product Manager</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/rewardgateway/426a19fb-9393-455c-af59-1f33bbe7ce3d'>Reward Gateway - E-Commerce Product Manager</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
@@ -340,7 +348,7 @@ this?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/Cermaticom/743999692350480-product-manager-all-level-'>Cermati.com Product Manager (All Level) | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Cermaticom/743999692350480-product-manager-all-level-'>Cermati.com Product Manager (All Level) | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
@@ -356,11 +364,11 @@ this?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/marqeta/jobs/1793491'>Job Application for Product Manager, Delivery at Marqeta</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/marqeta/jobs/1793491'>Job Application for Product Manager, Delivery at Marqeta</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/cruise/jobs/1781489?gh_jid=1781489'>Job Application for Product Manager - Customer Support at Cruise</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/cruise/jobs/1781489?gh_jid=1781489'>Job Application for Product Manager - Customer Support at Cruise</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Jul 18, 2019 ... The Product Manager, Customer Support works with our cross-functional team of 
 designers and engineers, and operations to lead the vision, strategy, and?...</p>
@@ -373,7 +381,7 @@ designers and engineers, and operations to lead the vision, strategy, and?...</p
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/endless/e429bff6-21de-4b1d-87de-8d0065f40625'>Endless - Product Designer</a></h5> 
+<h5><a href='https://jobs.lever.co/endless/e429bff6-21de-4b1d-87de-8d0065f40625'>Endless - Product Designer</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
@@ -406,7 +414,7 @@ delivering SaaS solutions, or you might be working in a Business Analyst or?...<
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/funding-circle-uk/job/oFQwafwV'>Funding Circle UK Careers - Senior Product Manager, Investor</a></h5> 
+<h5><a href='https://jobs.jobvite.com/funding-circle-uk/job/oFQwafwV'>Funding Circle UK Careers - Senior Product Manager, Investor</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
@@ -451,14 +459,6 @@ processes.</p>
 <h5><a href='https://kiperformance.join.com/jobs/255077-product-owner'>Job @ KI Group (Cologne): Product Owner | JOIN</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-25</p>
-<hr/>
-<h5><a href='https://www.workable.com/j/AFC267A132'>Cloudability - Jobs: Senior Product Manager - Apply online</a></h5> 
-<p><span class="badge badge-light"></span></p>
-<p>Jul 18, 2019 ... Apply online for the job of Senior Product Manager at Cloudability.</p>
-<hr/>
-<h5><a href='https://www.workable.com/j/B9338DE99B'>SkySlope - Jobs: Senior Product Manager - Apply online</a></h5> 
-<p><span class="badge badge-light"></span></p>
-<p>Jul 18, 2019 ... Apply online for the job of Senior Product Manager at SkySlope.</p>
 <hr/>
 
 
